Made connection to dashboard.

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -34,7 +34,7 @@
   <header id="header" class="fixed-top d-flex align-items-center header-transparent">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo me-auto"><a href="landing.html">Mentify</a></h1>
+      <h1 class="logo me-auto"><a href="/">Mentify</a></h1>
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
