--- a/templates/login.html
+++ b/templates/login.html
@@ -46,7 +46,7 @@
     class="fixed-top d-flex align-items-center header-transparent"
   >
     <div class="container d-flex align-items-center">
-      <h1 class="logo me-auto"><a href="landing.html">Mentify</a></h1>
+      <h1 class="logo me-auto"><a href="/">Mentify</a></h1>
     </div>
   </header>
   <!-- End Header -->
@@ -62,6 +62,7 @@
               </h3>
 
               <form action="/process_login" method="post">
+                <div class="msg">{{ msg }}</div>
               <div class="form-outline">
                 <input
                   type="text"
