--- a/templates/signup_main.html
+++ b/templates/signup_main.html
@@ -1,50 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>Mentify - Signup as Mentor/Mentee</title>
-    <meta content="" name="description" />
-    <meta content="" name="keywords" />
+<head>
+  <meta charset="utf-8" />
+  <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <!-- Favicons -->
-    <link href="../static/assets/img/favicon.png" rel="icon" />
-    <link href="../static/assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
+  <title>Mentify - Signup as Mentor/Mentee</title>
+  <meta content="" name="description" />
+  <meta content="" name="keywords" />
 
-    <!-- Google Fonts -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Montserrat:300,400,500,600,700"
-      rel="stylesheet"
-    />
+  <!-- Favicons -->
+  <link href="../static/assets/img/favicon.png" rel="icon" />
+  <link href="../static/assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
 
-    <!-- Vendor CSS Files -->
-    <link href="../static/assets/vendor/aos/aos.css" rel="stylesheet" />
-    <link
-      href="../static/assets/vendor/bootstrap/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <link
-      href="../static/assets/vendor/bootstrap-icons/bootstrap-icons.css"
-      rel="stylesheet"
-    />
-    <link
-      href="../static/assets/vendor/glightbox/css/glightbox.min.css"
-      rel="stylesheet"
-    />
-    <link href="../static/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
+  <!-- Google Fonts -->
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Montserrat:300,400,500,600,700"
+    rel="stylesheet" />
 
-    <!-- Template Main CSS File -->
-    <link href="../static/assets/css/style.css" rel="stylesheet" />
-  </head>
+  <!-- Vendor CSS Files -->
+  <link href="../static/assets/vendor/aos/aos.css" rel="stylesheet" />
+  <link href="../static/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="../static/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet" />
+  <link href="../static/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet" />
+  <link href="../static/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
+
+  <!-- Template Main CSS File -->
+  <link href="../static/assets/css/style.css" rel="stylesheet" />
+</head>
+
 </html>
 
 <body>
   <!-- ======= Header ======= -->
-  <header
-    id="header"
-    class="fixed-top d-flex align-items-center header-transparent"
-  >
+  <header id="header" class="fixed-top d-flex align-items-center header-transparent">
+    <form action="/signup_main" method="post"></form>
     <div class="container d-flex align-items-center">
       <h1 class="logo me-auto"><a href="/">Mentify</a></h1>
     </div>
@@ -57,30 +47,43 @@
   <div class="p-5 text-center" style="margin-top: 10%">
     <h1 class="mb-3">Whom would you like to sign up as?</h1>
   </div>
-  <div class="row g-3 justify-content-center align-items-center text-center">
-    <div class="col-sm-3">
-      <div
-        style="background-color: #acdbf8; border-radius: 10px; padding: 4px 4px"
-      >
-        <div>
-          <h3 class="title">
-            <a href="/signup" style="color: #00304e">Mentee</a>
-          </h3>
-          <p class="description">bfehfeihiehfil</p>
+  <form action="/user_category" method="post">
+    <div class="row g-3 justify-content-center align-items-center text-center">
+      <div class="col-sm-3">
+        <div style="background-color: #acdbf8; border-radius: 10px; padding: 4px 4px">
+          <div>
+
+            <h3 class="title">
+              <div style="color: #00304e">
+
+                <button class="btn btn-primary btn-md btn-block" type="submit" name="button"
+                  style="background: transparent" value="mentee">
+                  Mentee
+                </button>
+              </div>
+            </h3>
+            <p class="description">bfehfeihiehfil</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-3">
+        <div style="background-color: #014d7b; border-radius: 10px; padding: 4px">
+          <div style="color: #b2e0fd">
+            <h3 class="title">
+              <div style="color: #b2e0fd">
+
+                <button class="btn btn-primary btn-md btn-block" type="submit" name="button"
+                  style="background: transparent" value="mentor">
+                  Mentor
+                </button>
+              </div>
+            </h3>
+            <p class="description">ksnkleekgnegeh</p>
+          </div>
         </div>
       </div>
     </div>
-    <div class="col-sm-3">
-      <div style="background-color: #014d7b; border-radius: 10px; padding: 4px">
-        <div style="color: #b2e0fd">
-          <h3 class="title">
-            <a href="/signup" style="color: #b2e0fd">Mentor</a>
-          </h3>
-          <p class="description">ksnkleekgnegeh</p>
-        </div>
-      </div>
-    </div>
-  </div>
+  </form>
 
   <!-- <footer id="footer" class="section-bg" style="margin-bottom: 5px">
     <div class="container">
