Forgot password successfully implemented. Profile details can be viewd and updated

--- a/templates/login.html
+++ b/templates/login.html
@@ -86,6 +86,17 @@
               </div>
 
               <p>
+                Forgot Password?
+                <u
+                  ><b
+                    ><a href="forgot_password" style="color: #00304e"
+                      >Click Here!</a
+                    ></b
+                  ></u
+                >
+              </p>
+
+              <p>
                 Don't have an account?
                 <u
                   ><b
