--- a/templates/admin.html
+++ b/templates/admin.html
@@ -37,7 +37,7 @@
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
           <li>
-            <a class="nav-link scrollto active" href="dashboard_approval_admin.html">Approvals & Tags</a>
+            <a class="nav-link scrollto active" href="">Approvals & Tags</a>
           </li>
           <!-- <li><a href="#services">Update Tags</a></li> -->
           <li><a href="">Logout</a></li>
@@ -124,6 +124,45 @@
           </div> -->
           </div>
     </section>
+    <br>
+    <main style="margin-top: 10%">
+      <section id="services" class="services section-bg">
+        <div class="container" data-aos="fade-up">
+          <header class="section-header">
+            <h3>Courses to be approved</h3>
+          </header>
+  
+          <div class="justify-content-center align-items-center">
+            <form method="" action="">
+              <input type="" value="" style="
+                    background-color: rgb(216, 237, 250);
+                    border-color: #000000;
+                    border-width: 1px;
+                  " placeholder="Search.." />
+            </form>
+          </div>
+  
+          <br />
+  
+          <div class="row g-5">
+            {% for mentor in mentors %}
+            <div class="col-md-6 col-lg-4 wow bounceInUp" data-aos="zoom-in" data-aos-delay="100">
+              <div class="box">
+                <div class="icon" style="background: rgb(209, 237, 255)">
+                  <i class="bi bi-journal-text" style="color: #1985f0"></i>
+                </div>
+                <h3 class="title"><a href="{{ url_for('view_mentor_profile', username=mentor.username) }}">{{mentor.mentor_name}}</a></h3>
+                <p class="description">{{mentor.interests}}</p>
+                <!-- <button class="btn btn-primary btn-md btn-block" type="submit" style="background: #00304e">
+                    View Profile
+                </button> -->
+              </div>
+            </div>
+            {% endfor %}
+  
+           
+            </div>
+      </section>
     <!-- End Services Section -->
     <br>
     <section style="background-color: #ffffff; margin-top: 3%">
@@ -136,14 +175,16 @@
             <div class="card" style="background-color: #bcf1ff">
               <div class="card-body p-5 text-center">
 
+                <form action="/add_tag" method="post">
                 <div class="form-outline">
-                  <input type="text" id="typeEmailX-2" class="form-control form-control-lg" placeholder="Enter tag" />
+                  <input type="text" id="typeEmailX-2" class="form-control form-control-lg" placeholder="Enter tag" name="tag"/>
                   <label class="form-label" for=""></label>
                 </div>
 
                 <button class="btn btn-primary btn-md btn-block" type="submit" style="background: #00304e">
                   Add
                 </button>
+              </form>
               </div>
             </div>
           </div>
