--- a/templates/my_courses_mentee.html
+++ b/templates/my_courses_mentee.html
@@ -88,12 +88,12 @@
         <nav id="navbar" class="navbar order-last order-lg-0">
           <ul>
             <li>
-              <a class="nav-link scrollto active" href="dashboard_mentee.html"
+              <a class="nav-link scrollto active" href="{{ url_for('dashboard_mentee', username=username) }}"
                 >Home</a
               >
             </li>
-            <li><a href="profile_mentee.html">Profile</a></li>
-            <li><a href="my_courses_mentee.html">My Courses</a></li>
+            <li><a href="{{ url_for('profile_mentee', username=username,msg='')}}">Profile</a></li>
+            <li><a href="">My Courses</a></li>
             <li><a href="">Logout</a></li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
