--- a/templates/profile_mentor.html
+++ b/templates/profile_mentor.html
@@ -41,8 +41,8 @@
             <nav id="navbar" class="navbar order-last order-lg-0">
                 <ul>
                     <li><a class="nav-link scrollto active"
-                            href="{{url_for('dashboard_mentee', username=username)}}">Home</a></li>
-                    <li><a href="{{ url_for('profile_mentee', username=username,msg='') }}">Profile</a></li>
+                            href="{{url_for('dashboard_mentor',mentor=mentor,username=username)}}">Home</a></li>
+                    <li><a href="{{ url_for('profile_mentor', username=username,msg='') }}">Profile</a></li>
                     <li><a href="my_courses_mentee">My Courses</a></li>
                     <li><a href="/logout">Logout</a></li>
                 </ul>
