--- a/templates/admin.html
+++ b/templates/admin.html
@@ -74,7 +74,7 @@
               <div class="icon" style="background: rgb(209, 237, 255)">
                 <i class="bi bi-person-circle" style="color: #1985f0"></i>
               </div>
-              <h3 class="title"><a href="{{ url_for('view_mentor_profile', username=mentor.username) }}">{{mentor.mentor_name}}</a></h3>
+              <h3 class="title"><a href="{{ url_for('view_mentor_profile') }}?viewer=admin&username={{mentor.username}}">{{mentor.mentor_name}}</a></h3>
               <p class="description">{{mentor.interests}}</p>
               <!-- <button class="btn btn-primary btn-md btn-block" type="submit" style="background: #00304e">
                   View Profile
@@ -151,7 +151,7 @@
                 <div class="icon" style="background: rgb(209, 237, 255)">
                   <i class="bi bi-journal-text" style="color: #1985f0"></i>
                 </div>
-                <h3 class="title"><a href="{{ url_for('view_course',viewer_type='admin',course_id=course['course_id']) }}">{{course.course_name}}</a></h3>
+                <h3 class="title"><a href="{{ url_for('view_course') }}?viewer=admin&course_id={{course['course_id']}}">{{course.course_name}}</a></h3>
                 <p class="description">{{course.course_desc}}</p>
                 <!-- <button class="btn btn-primary btn-md btn-block" type="submit" style="background: #00304e">
                     View Profile
