modified option value for default filter -tag

--- a/templates/dashboard_mentee.html
+++ b/templates/dashboard_mentee.html
@@ -226,7 +226,7 @@
               <label for="filter" class="border-transparent"></label>
 
               <select name="filter" id="filter">
-                <option value="valuation">Filter - None</option>
+                <option value="">Filter - None</option>
                 <option value="valuation">Tag A</option>
                 <option value="equity">Tag B</option>
                 <option value="investment">Tag C</option>
