--- a/templates/my_courses_page_mentee.html
+++ b/templates/my_courses_page_mentee.html
@@ -58,7 +58,7 @@
             </li>
             <li><a href="profile_mentee.html">Profile</a></li>
             <li><a href="my_courses_mentee.html">My Courses</a></li>
-            <li><a href="">Logout</a></li>
+            <li><a href="{{ url_for('logout')}}">Logout</a></li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
         </nav>
