Integrated with search_and_filter

--- a/templates/dashboard_mentee.html
+++ b/templates/dashboard_mentee.html
@@ -222,7 +222,7 @@
           </header>
 
           <div class="justify-content-center align-items-center">
-            <form method="" action="">
+            <form method="POST" action="/search_sort_filter">
               <label for="filter" class="border-transparent"></label>
 
               <select name="filter" id="filter">
