--- a/templates/my_courses_page_mentee.html
+++ b/templates/my_courses_page_mentee.html
@@ -7,10 +7,10 @@
     <title>Mentify - Dashboard</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
-
+    
     <!-- Favicons -->
-    <link href="assets/img/favicon.png" rel="icon" />
-    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
+    <link href="../static/assets/img/favicon.png" rel="icon" />
+    <link href="../static/assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
 
     <!-- Google Fonts -->
     <link
@@ -19,23 +19,23 @@
     />
 
     <!-- Vendor CSS Files -->
-    <link href="assets/vendor/aos/aos.css" rel="stylesheet" />
+    <link href="../static/assets/vendor/aos/aos.css" rel="stylesheet" />
     <link
-      href="assets/vendor/bootstrap/css/bootstrap.min.css"
+      href="../static/assets/vendor/bootstrap/css/bootstrap.min.css"
       rel="stylesheet"
     />
     <link
-      href="assets/vendor/bootstrap-icons/bootstrap-icons.css"
+      href="../static/assets/vendor/bootstrap-icons/bootstrap-icons.css"
       rel="stylesheet"
     />
     <link
-      href="assets/vendor/glightbox/css/glightbox.min.css"
+      href="../static/assets/vendor/glightbox/css/glightbox.min.css"
       rel="stylesheet"
     />
-    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
+    <link href="../static/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
 
     <!-- Template Main CSS File -->
-    <link href="assets/css/style.css" rel="stylesheet" />
+    <link href="../static/assets/css/style.css" rel="stylesheet" />
   </head>
 
   <body>
@@ -49,15 +49,15 @@
         <nav id="navbar" class="navbar order-last order-lg-0">
           <ul>
             <li>
-              <a class="nav-link scrollto" href="dashboard_mentee.html">Home</a>
+              <a class="nav-link scrollto" href="{{ url_for('dashboard_mentee', username=username) }}">Home</a>
             </li>
             <li>
-              <a class="nav-link scrollto" href="dashboard_mentee.html"
+              <a class="nav-link scrollto" href="{{ url_for('dashboard_mentee', username=username) }}"
                 >Programs</a
               >
             </li>
-            <li><a href="profile_mentee.html">Profile</a></li>
-            <li><a href="my_courses_mentee.html">My Courses</a></li>
+            <li><a href="{{ url_for('profile_mentee', username=username,msg='') }}">Profile</a></li>
+            <li><a href="{{ url_for('my_courses', username=username,msg='') }}">My Courses</a></li>
             <li><a href="{{ url_for('logout')}}">Logout</a></li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
@@ -72,22 +72,22 @@
           <header
             style="text-align: center; background-color: rgb(190, 238, 255)"
           >
-            <h2>Course Name</h2>
+            <h2>{{course_name}}</h2>
           </header>
 
-          <div>Start Date:</div>
-          <div>End Date:</div>
+          <div>Start Date:{{course_start}}</div>
+          <div>End Date:{{course_end}}</div>
 
           <br />
 
           <div class="container" style="text-align: center">
-            Enter Description here
+            {{course_desc}}
           </div>
 
           <br />
 
           <div style="text-align: center; font-style: italic">
-            Status: Enrolled
+            Status: {{course_status}}
           </div>
 
           <br />
@@ -193,15 +193,15 @@
     ></a>
 
     <!-- Vendor JS Files -->
-    <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-    <script src="assets/vendor/aos/aos.js"></script>
-    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-    <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-    <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-    <script src="assets/vendor/php-email-form/validate.js"></script>
+    <script src="../static/assets/vendor/purecounter/purecounter_vanilla.js"></script>
+    <script src="../static/assets/vendor/aos/aos.js"></script>
+    <script src="../static/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../static/assets/vendor/glightbox/js/glightbox.min.js"></script>
+    <script src="../static/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+    <script src="../static/assets/vendor/swiper/swiper-bundle.min.js"></script>
+    <script src="../static/assets/vendor/php-email-form/validate.js"></script>
 
     <!-- Template Main JS File -->
-    <script src="assets/js/main.js"></script>
+    <script src="../static/assets/js/main.js"></script>
   </body>
 </html>
